Revert "refactoring to java 8"
This reverts commit b9c04800